updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>just some dude tryna master code</p>
+      <h1>born & raised in Utah</h1>
+      <p>Pleasant Grove and Helper Utah</p>
+      <h1>I love gaming & making music</h1>
+      <p>especially modding games</p>
+      <h1>I hope I can become a software developer</h1>
+      <p>in 2019 I tried to get a job as an entry level programmer but I needed applicable skills</p>
+      <h1>Currently living on the East side of Sandy</h1>
+      <p>near the mountains</p>
+      <h1>I want to be able to make websites for people</h1>
+      <p>so elon musk doesnt take all their money lol</p>
     </section>
 
     <footer id="footer">
